[build-system] 
requires = ["setuptools", "setuptools-scm"] 
build-backend = "setuptools.build_meta"


[project]
name = "blockchain"
version = "0.1.0"
description = "Test create a blockchain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = 3.10
[testenv]
deps =
    coverage
    unittest-xml-reporting
    -e .
skip_install = true

commands =
    coverage run -m xmlrunner discover -v -s ./tests --output-file unittest-report.xml
    coverage report -m
    coverage html
"""
[dependency-groups]

dev = [
    {include-group = "lint"},
]

lint = [
    "ruff>=0.14.4",
]
